<resources>
    <string name="app_name">KKL涂鸦板</string>

    <!-- 通用 -->
    <string name="public_common_title_hint">提 示</string>
    <string name="public_common_sure">确定</string>
    <string name="public_common_cancel">取消</string>
    <string name="public_common_yes">是</string>
    <string name="public_common_no">否</string>
    <string name="public_common_next">下一步</string>
    <string name="public_common_save">保存</string>
    <string name="public_common_title">涂鸦板</string>

    <!-- 首页 -->
    <string name="home_tab_photo_title">我的作品</string>
    <string name="home_tab_piazza_title">广场动态</string>

    <!-- 编辑页 -->
    <string name="edit_crop_title">裁剪</string>
    <string name="edit_filter_title">滤镜</string>
    <string name="edit_doodle_title">涂鸦</string>
    <string name="edit_doodle_adjust">调整</string>

    <!-- 滤镜 -->
    <string name="filter_adjuster_1">亮度</string>
    <string name="filter_adjuster_2">对比度</string>
    <string name="filter_adjuster_3">饱和度</string>
    <string name="filter_adjuster_4">色调</string>

    <!-- 涂鸦 -->
    <string name="dialog_save_doodle_msg">是否保存到我的作品中？</string>
    <string name="dialog_detection_doodle_msg">是否转换成素描图？</string>
    <string name="dialog_select_title_size">画笔调整</string>
    <string name="dialog_select_title_eraser">橡皮擦调整</string>
    <string name="dialog_select_size">画笔粗细 %s</string>
    <string name="dialog_select_eraser_size">橡皮擦粗细 %s</string>
    <string name="dialog_select_alpha">画笔透明度 %s</string>
    <string name="dialog_color_title">颜色调整</string>
    <string name="dialog_color_hint_low">浅</string>
    <string name="dialog_color_hint_deep">深</string>

    <!-- 展示页 -->
    <string name="show_shape">分享</string>
    <string name="show_edit">编辑</string>

    <!-- 侧滑栏 -->
    <string name="left_menu_camera">相机</string>
    <string name="left_menu_album">本地相册</string>
    <string name="left_menu_normal">默认图像</string>
    <string name="left_menu_new">空白画板</string>
    <string name="left_menu_powerpoint">幻灯片</string>
    <string name="left_menu_tutorials">教程</string>
    <string name="left_menu_setting">设置</string>

    <!-- 幻灯片 -->
    <string name="ppt_go_on">继续</string>

    <!-- 关于我们 -->
    <string name="about_title">设置</string>
    <string name="about_item_clean">清理缓存</string>
    <string name="about_dialog_clean">是否清除我的作品?</string>
    <string name="about_item_version">当前版本号</string>

    <!-- 教程 -->
    <string name="teach_title">教程</string>
    <string name="teach_item_mouse">怎么画老鼠</string>
    <string name="teach_item_cow">怎么画奶牛</string>
    <string name="teach_item_panda">怎么画熊猫</string>
    <string name="teach_item_peiqi">怎么画佩奇</string>

</resources>
