<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg_normal"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/dialog_color_title"
        style="@style/public_style_text_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_common_title_height"
        android:gravity="center"
        android:text="@string/dialog_color_title"/>


    <com.kkl.graffiti.doodle.view.ColorPicker.ColorPicker
        android:id="@+id/dialog_color_picker_colorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/public_list_margin"
        android:layout_marginLeft="@dimen/public_list_margin"
        android:layout_marginRight="@dimen/public_list_margin"
        android:layout_marginTop="@dimen/dialog_color_seekbar_hint_margin"
        android:gravity="center"
        >

        <TextView
            style="@style/public_style_text_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_color_seekbar_hint_margin"
            android:text="@string/dialog_color_hint_low"/>

        <com.kkl.graffiti.doodle.view.ColorPicker.SVBar
            android:id="@+id/dialog_color_picker_svbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_color_seekbar_height"
            android:layout_weight="1"/>

        <TextView
            style="@style/public_style_text_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_color_seekbar_hint_margin"
            android:text="@string/dialog_color_hint_deep"/>

    </LinearLayout>


    <View
        android:id="@+id/view_bottom_line"
        style="@style/Line.Horizontal"/>

    <LinearLayout
        android:id="@+id/ll_bottom_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/public_common_title_height"
        android:gravity="center">

        <TextView
            android:id="@+id/color_left_button_text"
            style="@style/public_style_text_explain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_global_split_left"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/public_common_cancel"
            />

        <View
            android:id="@+id/dialog_btn_devider"
            style="@style/Line.Vertical"/>

        <TextView
            android:id="@+id/color_right_button_text"
            style="@style/public_style_text_explain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_global_split_right"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/public_common_sure"/>
    </LinearLayout>

</LinearLayout>