<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_common_title_height"
        android:background="@color/public_color_bg_protrude"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_edit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_titlebar_back_black"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_edit_save"
                style="@style/public_style_text_support"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="@dimen/public_list_margin"
                android:text="@string/public_common_save"/>

            <TextView
                android:id="@+id/tv_edit_next"
                style="@style/public_style_text_support"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="@dimen/public_list_margin"
                android:text="@string/public_common_next"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit_title"
            style="@style/public_style_text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_crop_title"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
</LinearLayout>